Update personal details: removed DOB, updated location and phone

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                     <div class="personal-details">
                         <h3>Personal Details</h3>
                         <ul>
-                            <li><strong>Date of Birth:</strong> 09 June 2000</li>
                             <li><strong>Nationality:</strong> Kenyan</li>
                             <li><strong>Languages:</strong> English, Kiswahili, Basic German</li>
                         </ul>
@@ -477,14 +476,14 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Location</h4>
-                                <p>P.O BOX 20-60601, Meru - Kenya</p>
+                                <p>P.O BOX 1419 00600, Nairobi - Kenya</p>
                             </div>
                         </div>
                         <div class="info-item">
                             <i class="fas fa-phone-alt"></i>
                             <div>
                                 <h4>Phone</h4>
-                                <p>+254 746 908 674 / +254 772 928 05</p>
+                                <p>+254 746 908 674 / +254 737292805</p>
                             </div>
                         </div>
                         <div class="info-item">
