Update job title at KRA to Data Analyst

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dancan Mbaabu - Data Analyst & Computation Engineer</title>
+    <title>DANCAN MBAABU - Data Analyst & Computation Engineer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -140,7 +140,7 @@
                     <div class="timeline-item">
                         <div class="timeline-content">
                             <span class="date">Jan 2025 - Present</span>
-                            <h3>Data Analyst (Intern)</h3>
+                            <h3>Data Analyst</h3>
                             <h4>KRA Head Quarter, Nairobi - Kenya</h4>
                             <ul>
                                 <li>Contributes in analyzing data sets.</li>
@@ -155,7 +155,7 @@
                     <div class="timeline-item">
                         <div class="timeline-content">
                             <span class="date">Aug 2024 - Dec 2024</span>
-                            <h3>Data Analyst (Support Team)</h3>
+                            <h3>Data Analyst</h3>
                             <h4>Angaza Computers Company, Nairobi - Kenya</h4>
                             <ul>
                                 <li>Contributed in Collecting (Extract data), clean, and analyzing data.</li>
