Add Articles dropdown menu with link to Data Analytics PDF

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#education">Education</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Articles <i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-content">
+                        <a href="https://github.com/dancan123/Data-Analytics-Article-/blob/main/Data%20Analytics%20in%20the%20Age%20of%20Machine%20Learning%20and%20AI%20.pdf"
+                            target="_blank">Data Analysis Article</a>
+                    </div>
+                </li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="burger">
@@ -276,6 +283,13 @@
                             and assist in data-driven decision making.</p>
                         <span class="skill-tag">PowerBI</span>
                         <span class="skill-tag">SQL</span>
+                        <div style="margin-top: 1rem;">
+                            <a href="https://github.com/dancan123/Revenue_Analaysis/blob/main/AI-Skilling-main%20(1)/AI-Skilling-main/Taxpayersegmentation.ipynb"
+                                target="_blank" class="btn btn-primary"
+                                style="padding: 0.5rem 1rem; font-size: 0.9rem;">
+                                <i class="fab fa-python"></i> Python Analysis
+                            </a>
+                        </div>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-database"></i> Sales Analysis System</h3>
